--- a/.github/workflows/scheduled_get_request.yml
+++ b/.github/workflows/scheduled_get_request.yml
@@ -2,8 +2,8 @@ name: Scheduled GET Request
 
 on:
   schedule:
-    # Executa a cada 30 minutos
     - cron: "0,30 8-22 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
