--- a/.github/workflows/scheduled_get_request.yml
+++ b/.github/workflows/scheduled_get_request.yml
@@ -2,7 +2,7 @@ name: Scheduled GET Request
 
 on:
   schedule:
-    - cron: "0,25,50 7-18 * * *"
+    - cron: "0,25,50 7-18 * * 1-5"
   workflow_dispatch:
 
 jobs:
